--- a/.github/workflows/DevCard.yml
+++ b/.github/workflows/DevCard.yml
@@ -1,5 +1,4 @@
-- name: @dailydotdev/devcard
-  uses: dailydotdev/action-devcard@2.1.0
+name: DevCard
 
 permissions:
   contents: write
@@ -17,6 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: devcard
-        uses: dailydotdev/action-devcard@2.0.4
+        uses: dailydotdev/action-devcard@2.0.2
         with:
           devcard_id: ${{ secrets.DEVCARD_ID }}
